--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body background=F2.jpg>
     <h1 align= center> CURRICULO</h1>
-    <CENTER><border-radius=></border-radius><img src="EU.jpeg" width="30%"></CENTER>
+    <CENTER><img src="EU.jpeg" width="30%"></CENTER>
     <br>
     <MARQUEE><h2>CaioST</h2></MARQUEE>
     <audio controls controls style="position: absolute; top: 50px; left: 20px;">
