--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> CURRICULO DE CAIO</title>
 </head>
-<body background=F2.jpg>
+<body background="F2.jpg">
     <h1 align= center> CURRICULO</h1>
     <CENTER><img src="EU.jpeg" width="30%"></CENTER>
     <br>
